--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>IOT Vega QR Code Reader</title>
-    <script src="config.js"></script>
+    <script src="%PUBLIC_URL%/config.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script src="jquery.slim.min.js"></script>
-    <script src="bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.slim.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
   </body>
 </html>
